[project]
name = "format-changer"
version = "1"
description = "quick format changer for desktop with some gui"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "no"}
requires-python = ">=3.13"
dependencies = [
    "docx2pdf (>=0.1.8,<0.2.0)",
    "pdf2docx (>=0.5.8,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
